<resources>
    <string name="app_name">ePUTNI</string>
    <string name="no_internet">Nema interneta!</string>
    <string name="sign_in_with_google">Google prijava</string>
    <string name="sign_out">Odjava</string>
    <string name="john_doe_estudent_hr">john.doe@estudent.hr</string>
    <string name="allowed_domain">\@estudent.hr</string>
    <string name="john_doe">John Doe</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile">Profil</string>
    <string name="vehicles">Vozila</string>
    <string name="warrants">Putni nalozi</string>
    <string name="vehicle_model_example">Model vozila (npr. Mazda CX30)</string>
    <string name="vehicle_name">Ime vozila</string>
    <string name="license_plate_example">Registracija (npr. ZG1234ZG)</string>
    <string name="vehicle_type">Vrsta vozila</string>
    <string name="save_vehicle">Spremi vozilo</string>
    <string name="select_car_type">Odaberi vrstu vozila</string>
    <string name="vehicle_saved">Vozilo spremljeno</string>
    <string name="not_logged_in">Niste prijavljeni</string>
    <string name="vehicles_list">Lista vozila</string>
    <string name="test_vehicle_name">Test naziv vozila</string>
    <string name="test_vehicle_model">Test model vozila</string>
    <string name="vehicle_add">Dodaj vozilo</string>
    <string name="vehicle_deleted">Vozilo izbrisano</string>
    <string name="error_deleting_vehicle">Greška kod brisanja</string>
    <string name="unauthorized_domain">Neautorizirana domena</string>
    <string name="authentication_failed">Provjera autentičnosti neuspješna</string>
    <string name="failed_to_save_user_data">Neuspješno spremanje podataka</string>
    <string name="delete_vehicle">Obrisati vozilo?</string>
    <string name="delete_confirmation_message">Jeste li sigurni?</string>
    <string name="no_vehicles">Nema upisanih vozila!</string>
    <string name="vehicle">vehicle</string>
    <string name="vehicle_updated">Vozilo ažurirano</string>
    <string name="update_vehicle">Ažuriraj vozilo</string>
    <string name="select_car">Odaberite vozilo</string>
    <string name="count_kilometers_onStart">Stanje brojila na početku puta</string>
    <string name="enter_start_city">Unesi gradove</string>
    <string name="start_city">Početna lokacija</string>
    <string name="destination">Destinacija</string>
    <string name="measure_distance_with_mobile">Mjeri udaljenost mobitelom</string>
    <string name="start_trip">Pokreni put</string>
    <string name="end_trip">Završi put</string>
    <string name="mondatory_vehicle_name">Ime vozila je obavezno</string>
    <string name="mondatory_vehicle_model">Model vozila je obavezan</string>
    <string name="mondatory_start_km">Stanje brojila obavezno</string>
    <string name="mondatory_start_city">Obavezna početna lokacija</string>
    <string name="mondatory_end_city">Obavezna destinacija</string>
    <string name="trip_description">Zadatak/opis puta</string>
    <string name="scan_receipt">Skeniraj račun</string>
    <string name="upload_invoice">Učitaj račun</string>
    <string name="trip_started">Put pokrenut</string>
    <string name="role_in_association">Pozicija u Udruzi:</string>
    <string name="role">Pozicija</string>
    <string name="role_required">Obavezno upisati poziciju</string>
    <string name="role_saved">Pozicija spremljena</string>
    <string name="role_failed_save">Neuspješno spremanje pozicije</string>
    <string name="failed_to_check_user_data">Failed to check user data</string>
    <string name="invalid_license_plate">Neispravna registracija</string>
    <string name="trip_ended">Put završen</string>
    <string name="mondatory_description">Obavezno upisati opis puta</string>
    <string name="select_file">Odaberi datoteku</string>
    <string name="gg">gg</string>
    <string name="end_trip_question">Završiti putovanje?</string>
    <string name="end_trip_question_message">Jeste li unijeli sve potrebne podatke?</string>
    <string name="warrants_list">Lista putnih naloga</string>
    <string name="no_warrants">Nema putnih naloga!</string>
    <string name="warrant_add">Dodaj putni nalog</string>
    <string name="test_warrant_name">Test destinacija</string>
    <string name="test_time_finished">Test vrijeme završetka</string>
    <string name="warrant">warrant</string>
    <string name="warrant_details">Detalji putnog naloga</string>
    <string name="start_time">Vrijeme početka puta</string>
    <string name="end_time">Vrijeme kraja puta</string>
    <string name="end_city">Završna lokacija</string>
    <string name="end_kilometers">Stanje brojila na kraju puta</string>
    <string name="checked_by_finance_team">Potvrđeno od RIF-a</string>
    <string name="file_count">Broj unesenih računa</string>
    <string name="title_activity_app_scan">AppScanActivity</string>
    <string name="error_scan">Greška kod skeniranja</string>
    <string name="error_cancelled_failed">Skeniranje prekinuto ili failano</string>
    <string name="scanner_error">Skeniranje dokumenta neuspješno pokrenuto</string>
    <string name="eputni_warrant_sent">ePUTNI - Putni nalog poslan!</string>
    <string name="email_address_for_sending">eputni.rif@estudent.hr</string>
    <string name="sending_email">Slanje maila…</string>
    <string name="login_eputni">Prijava u ePUTNI</string>
    <string name="checked">Pregledano i potvrđeno</string>
    <string name="not_checked">Nije potvrđeno</string>
    <string name="error">Greška</string>
</resources>