<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/_10sp"
    tools:context=".fragment.VehiclesFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/_18sp">

        <EditText
            android:id="@+id/etVehicleName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_24sp"
            android:hint="@string/vehicle_name"
            android:importantForAutofill="no"
            android:inputType="text" />

        <EditText
            android:id="@+id/etVehicleModel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_24sp"
            android:hint="@string/vehicle_model_example"
            android:importantForAutofill="no" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/_18sp"
            android:text="@string/vehicle_type"
            android:textSize="@dimen/_18sp" />

        <Spinner
            android:id="@+id/spinnerVehicleType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_24sp"
            android:spinnerMode="dropdown" />

        <EditText
            android:id="@+id/etLicensePlate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_24sp"
            android:hint="@string/license_plate_example"
            android:importantForAutofill="no" />

        <Button
            android:id="@+id/btnSaveVehicle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save_vehicle" />

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabListVehicles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_marginEnd="@dimen/_18sp"
        android:layout_marginBottom="@dimen/_100sp"
        android:src="@drawable/ic_list"
        style="@style/CustomFloatingActionButton"
        android:contentDescription="@string/vehicles_list"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>