<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragment.WarrantDetailsFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/light_gray"
            app:navigationIcon="?attr/homeAsUpIndicator"
            app:title="@string/warrant_details" />
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/_16sp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_8sp"
            android:text="@string/start_time"
            android:textSize="@dimen/_16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvStartTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_16sp"
            android:textSize="@dimen/_14sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_8sp"
            android:text="@string/end_time"
            android:textSize="@dimen/_16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvEndTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_16sp"
            android:textSize="@dimen/_14sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_8sp"
            android:text="@string/start_city"
            android:textSize="@dimen/_16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvStartCity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_16sp"
            android:textSize="@dimen/_14sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_8sp"
            android:text="@string/end_city"
            android:textSize="@dimen/_16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvEndCity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_16sp"
            android:textSize="@dimen/_14sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_8sp"
            android:text="@string/count_kilometers_onStart"
            android:textSize="@dimen/_16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvStartKilometers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_16sp"
            android:textSize="@dimen/_14sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_8sp"
            android:text="@string/trip_description"
            android:textSize="@dimen/_16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_16sp"
            android:textSize="@dimen/_14sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_8sp"
            android:text="@string/file_count"
            android:textSize="@dimen/_16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvFileCount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_16sp"
            android:textSize="@dimen/_14sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_8sp"
            android:text="@string/checked_by_finance_team"
            android:textSize="@dimen/_16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvCheckedByFinanceTeam"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_16sp"
            android:textSize="@dimen/_14sp" />

    </LinearLayout>

</LinearLayout>