<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/item_background"
    android:layout_margin="@dimen/_10sp"
    android:orientation="horizontal"
    android:padding="@dimen/_30sp">

    <ImageView
        android:id="@+id/ivVehicleTypeIcon"
        android:layout_width="@dimen/_40sp"
        android:layout_height="@dimen/_40sp"
        android:layout_marginEnd="@dimen/_18sp"
        tools:src="@drawable/ic_car"
        android:contentDescription="@string/vehicle_type" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvVehicleName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/test_vehicle_name"
            android:textSize="@dimen/_18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvVehicleModel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_14sp"
            tools:text="@string/test_vehicle_model" />
    </LinearLayout>
</LinearLayout>