<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/_30sp"
    tools:context=".fragment.ProfileFragment">

    <ImageView
        android:id="@+id/ivAvatar"
        android:layout_width="@dimen/_128dp"
        android:layout_height="@dimen/_128dp"
        tools:src="@tools:sample/avatars"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/_50sp"
        android:importantForAccessibility="no" />

    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/john_doe"
        android:textSize="@dimen/_24sp"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/_24sp"
        />

    <TextView
        android:id="@+id/tvEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/john_doe_estudent_hr"
        android:textSize="@dimen/_16sp"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/_50sp"
        />

    <TextView
        android:id="@+id/tvRoleLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_role"
        android:textSize="@dimen/_16sp"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/_16sp"
        />

    <EditText
        android:id="@+id/etRole"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/role"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/_50sp"
        android:inputType="text"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/btnSignOut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/_24sp"
        android:text="@string/sign_out" />

</LinearLayout>